front: add labels to form

--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,14 @@
     </head>
     <body>
         <div class="form">
-            <input type="text" id="body">
-            <br>
-            <input type="text" id="author">
+            <div>
+                <label for="body">Message:</label>
+                <input type="text" id="body">
+            </div>
+            <div>
+                <label for="author">Author</label>
+                <input type="text" id="author">
+            </div>
             <br>
             <button id="send">Send</buton>
         </div>
